# dspy-micro-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
evals/: rubrics.yaml  run_evals.py  tasks.yaml
micro_agent/: __init__.py  agent.py  cli.py  config.py  costs.py  logging_setup.py  optimize.py  runtime.py  server.py  signatures.py  tools.py
opt/: plan_demos.json
tests/: test_basic.py  test_openai_tool_calls.py
